--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 		    			<div class="col-md-8 col-md-offset-2">
 			    			<div class="fh5co-owl-text-wrap">
 						    	<div class="fh5co-owl-text text-center to-animate">
-						    		<h1 class="fh5co-lead">Chemical Biology</h1>
+						    		<h1 class="fh5co-lead">Chemical Biologyy</h1>
 									<h2 class="fh5co-sub-lead">We work at the intersection of chemistry and biology to develop novel chemical tools and techniques to visualize, understand and manipulate biological systems at the molecular level.</h2>
 						    	</div>
 						    </div>
