--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 		<div class="container" id="fh5co-products">
 			<div class="row">
 				<div class="col-md-12">
-					<h1 class="pub-page-head" style="text-align:justify; color: #382f2d; font-family: Arial; font-weight: 900;">Welcome to Chu Lab</h1>
+					<h1 class="pub-page-head" style="text-align:justify; color: #382f2d; font-family: Arial; font-weight: 900;">Welcome to Chu Lab!!</h1>
 					<p class="fh5co-section-sub-lead" style="text-align:justify; color: #5e5e5e; font-family: Arial;">Research in the Chu lab lies at the frontier of chemical biology. Our lab aims to apply multidisciplinary approaches to tackle the great challenges in biology and drug discovery. We are specifically interested in discovery and functional characterization of microproteins, an emerging class of small proteins with vital roles in biology. Study on microprotein biology in the context of human health and disease will unveil missing pieces of complex pathological processes, and offer novel insights into therapeutic interventions.</p>
 					<p class="fh5co-section-sub-lead" style="text-align:justify; color: #5e5e5e; font-family: Arial;">We seek highly motivated and talented individuals to join our team. Please email Qian for more information. </p>
 					<div class="homepage">
