--- a/team.html
+++ b/team.html
@@ -94,12 +94,13 @@
 						</div>
 						<div class="fh5co-feature-intro">
 							<h3 style="font-weight: bold; color: #382f2d; font-family: Arial;">Qian Chu, Ph.D.</h3>
-							<h4 style="text-align:justify; color: #5e5e5e; font-family: Arial;">Principle Investigator</h4>
+							<h4 style="text-align:justify; color: #5e5e5e; font-family: Arial;">Principal Investigator</h4>
 							<p style="text-align:justify; color: #5e5e5e; font-family: Arial;">Qian obtained his Bachelor and Master degrees in Chemistry at Nanjing University under the guidance of Prof. Wei-Yin Sun. He then joined Prof. Gregory Verdine’s laboratory at Harvard University to pursue his Ph.D. degree, where he was interested in drugging the “undruggable” proteome with stapled peptides. In 2014, he started postdoctoral training as a George Hewitt Postdoctoral Fellow in Prof. Alan Saghatelian’s group at the Salk Institute. During his postdoc, Qian discovered and characterized a novel class of microproteins which are encoded by small open reading frames.</p>
-							<p style="text-align:justify; color: #5e5e5e; font-family: Arial;"><b>Email:</b> 123@cpu.edu.cn </p>
+							<p style="text-align:justify; color: #5e5e5e; font-family: Arial;"><b>Email:</b> qianchu927 at yahoo.com </p>
 						</div>
 					</div>
 					<!-- second -->
+					<!--
 					<div class="fh5co-feature">
 						<div class="fh5co-feature-icon">
 							<img src="./images/team/member-1.jpeg" style="width: 300px; height: 300px; margin-right:50px;">
@@ -110,7 +111,10 @@
 							<p style="text-align:justify; color: #5e5e5e; font-family: Arial;">B.S.:<br />M.S.:<br />Ph.D.:<br /><br />Email: 123@cpu.edu.cn</p>
 						</div>
 					</div>
+					-->
+				
 					<!-- third -->
+					<!--
 					<div class="fh5co-feature">
 						<div class="fh5co-feature-icon">
 							<img src="./images/team/member-1.jpeg" style="width: 300px; height: 300px; margin-right:50px;">
@@ -121,6 +125,7 @@
 							<p style="text-align:justify; color: #5e5e5e; font-family: Arial;">B.S.:<br />M.S.:<br />Ph.D.:<br /><br />Email: 123@cpu.edu.cn</p>
 						</div>
 					</div>
+					-->
 					
 				</div>
 			</div>	
