--- a/contact.html
+++ b/contact.html
@@ -95,10 +95,10 @@
 								<h3 style="text-align:left; font-size: 26px; color: #382f2d; font-family: arial; margin-right: 200px;">CHU-Lab @ CPU<br /></h3>
 								<h3 style="text-align:left; font-size: 20px; color: #382f2d; font-family: arial;">中国药科大学江宁校区</h3>
 								<h3 style="text-align:left; font-size: 20px; color: #382f2d; font-family: arial;">江苏省南京市江宁区龙眠大道639号<br /></h3>
-								<h3 style="text-align:left; font-size: 18px; color: #382f2d; font-family: arial;"><strong>Email:</strong> info@company.com<br /></h3>
-								<h3 style="text-align:left; font-size: 18px; color: #382f2d; font-family: arial;"><strong>Phone:</strong> 025-98765432<br /></h3>
+								<h3 style="text-align:left; font-size: 18px; color: #382f2d; font-family: arial;"><strong>Email:</strong> qianchu927 at yahoo.com<br /></h3>
+								<!--<h3 style="text-align:left; font-size: 18px; color: #382f2d; font-family: arial;"><strong>Phone:</strong> 025-98765432<br /></h3>
 								<h3 style="text-align:left; font-size: 18px; color: #382f2d; font-family: arial;"><strong>website:</strong> <a href="https://www.salk.edu" target="_blank">www.example.edu.cn</a><br /></h3>
-							
+							    -->
 						</div>
 						<div class="fh5co-feature-intro">
 							<div style="width: 400px; height: 400px; border: #ccc solid 10px; margin:20px 0px; margin-bottom:30px;" id="dituContent">
