--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 			    			<div class="fh5co-owl-text-wrap">
 						    	<div class="fh5co-owl-text text-center to-animate">
 						    		<h1 class="fh5co-lead">MICROPROTEINS</h1>
-									<h2 class="fh5co-sub-lead">As a hidden pearl in the genome, microproteins represent a rapidly growing collection of macromolecules with essential roles in a wide spectrum of biological events.</h2>
+									<h2 class="fh5co-sub-lead">As hidden pearls in the genome, microproteins represent a rapidly growing collection of macromolecules with essential roles in a wide spectrum of biological events.</h2>
 						    	</div>
 						    </div>
 					    </div>
