--- a/contact.html
+++ b/contact.html
@@ -91,7 +91,7 @@
 					<div class="fh5co-feature" style="border-bottom: 0;">
 						<div class="fh5co-feature-icon" style="margin-right: 0px; margin-top: 5px; margin-bottom: 115px; ">
 							
-								<h3 style="text-align:left; font-size: 24px; color: #382f2d; font-family: arial; margin-right: 200px;">CHU-Lab @ CPU<br /></h3>
+								<h3 style="text-align:left; font-size: 24px; color: #382f2d; font-family: arial;">CHU-Lab @ CPU<br /></h3>
 								<h3 style="text-align:left; font-size: 20px; color: #382f2d; font-family: arial;">School of Pharmacy, China Pharmaceutical University</h3>
 								<h3 style="text-align:left; font-size: 20px; color: #382f2d; font-family: arial;">639 Longmian Avenue, Jiangning District<br /></h3>
 								<h3 style="text-align:left; font-size: 20px; color: #382f2d; font-family: arial;">Nanjing, 211198, P.R.China<br /></h3>
